# flaskhtmxtailwind

./: .flaskenv  README.md  feedparse.py  pyproject.toml
src/flaskhtmxtailwind/: __init__.py
src/flaskhtmxtailwind/templates/: base.html  feed.html
src/flaskhtmxtailwind/templates/partials/: entry.html  entry_page.html
