[project]
name = "flaskhtmxtailwind"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Carsten Skov", email = "carsten@simcax.dk" }
]
dependencies = [
    "flask[dotenv]<3.0.0",
    "jinja-partials>=0.1.1",
    "feedparser>=6.0.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "flaskhtmxtailwind:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flaskhtmxtailwind"]
